[gd_scene load_steps=7 format=3 uid="uid://baavt1lajqqcj"]

[ext_resource type="Script" path="res://scripts/winningChamberController.gd" id="1_38vi8"]
[ext_resource type="Shader" path="res://shaders/royal.gdshader" id="2_nttog"]
[ext_resource type="Texture2D" uid="uid://pbyssup25ian" path="res://art/coin.png" id="3_f1eh5"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hncr3"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_00u5s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ihru8"]
shader = ExtResource("2_nttog")

[node name="WinningChamber" type="Node2D"]
script = ExtResource("1_38vi8")

[node name="StaticBodies" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="StaticBodies"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodies/Floor"]
position = Vector2(0, 330)
shape = SubResource("WorldBoundaryShape2D_hncr3")
one_way_collision = true
one_way_collision_margin = 128.0

[node name="Polygon2D" type="Polygon2D" parent="StaticBodies/Floor"]
position = Vector2(0, 328.675)
scale = Vector2(1, -1)
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(-674, -10, -588, -1, 587, 0, 672, -9, 673, -111, -672, -110)

[node name="Ceiling" type="StaticBody2D" parent="StaticBodies"]
position = Vector2(0, -330)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBodies/Ceiling"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_00u5s")

[node name="Polygon2D" type="Polygon2D" parent="StaticBodies/Ceiling"]
position = Vector2(0, 0.375)
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(-674, -10, -588, -1, 587, 0, 672, -9, 673, -111, -672, -110)

[node name="Polygon2D" type="Polygon2D" parent="StaticBodies"]
position = Vector2(630, 0.201614)
rotation = 1.5708
scale = Vector2(0.65316, 1)
color = Color(0, 0, 0.27451, 1)
polygon = PackedVector2Array(-674, -10, -588, -1, 587, 0, 672, -9, 673, -111, -672, -110)

[node name="Polygon2D2" type="Polygon2D" parent="StaticBodies"]
position = Vector2(-630, -0.119591)
rotation = -1.5708
scale = Vector2(0.654151, 1)
color = Color(0, 0, 0.27451, 1)
polygon = PackedVector2Array(-674, -10, -588, -1, 587, 0, 672, -9, 673, -111, -672, -110)

[node name="TextController" type="Node2D" parent="."]
z_index = -1

[node name="VBoxContainer" type="VBoxContainer" parent="TextController"]
offset_left = -619.605
offset_top = -316.22
offset_right = -274.655
offset_bottom = -212.22
scale = Vector2(3, 3)
alignment = 1

[node name="You Win" type="RichTextLabel" parent="TextController/VBoxContainer"]
layout_mode = 2
text = "YOU WIN!"
fit_content = true

[node name="StarsEarnedFromWinning" type="RichTextLabel" parent="TextController/VBoxContainer"]
layout_mode = 2
text = "You got an extra 10000 stars"
fit_content = true

[node name="StarsEarnedFromRun" type="RichTextLabel" parent="TextController/VBoxContainer"]
layout_mode = 2
text = "Stars earned this run:"
fit_content = true

[node name="Time" type="RichTextLabel" parent="TextController/VBoxContainer"]
layout_mode = 2
text = "Your Time:"
fit_content = true

[node name="BestTime" type="RichTextLabel" parent="TextController/VBoxContainer"]
layout_mode = 2
text = "Best Time: 0h 0m 0s"
fit_content = true

[node name="NrWins" type="RichTextLabel" parent="TextController/VBoxContainer"]
layout_mode = 2
text = "Total Wins: "
fit_content = true

[node name="Coin" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ihru8")
position = Vector2(343, -109)
texture = ExtResource("3_f1eh5")

[node name="Label" type="RichTextLabel" parent="Coin"]
offset_left = -162.605
offset_top = -158.0
offset_right = -53.605
offset_bottom = -118.0
scale = Vector2(3, 3)
text = "You unlocked:"

[node name="CoinType" type="RichTextLabel" parent="Coin"]
offset_left = -212.0
offset_top = 57.0
offset_right = -70.0
offset_bottom = 105.0
scale = Vector2(3, 3)
fit_content = true
